Fixes issue with turn order visibility on mobile

--- a/src/pages/DraftSelect.css
+++ b/src/pages/DraftSelect.css
@@ -43,7 +43,7 @@
 }
 
 .draft-left {
-  visibility: hidden;
+  display: none;
 }
 
 .player-list {
@@ -215,7 +215,7 @@
   }
 
   .draft-left {
-    visibility: visible;
+    display: unset;
     width: 25%;
     padding: 10px;
     margin-top: 5px
